--- a/client/src/styles/scss/includes/_footer.scss
+++ b/client/src/styles/scss/includes/_footer.scss
@@ -1,7 +1,19 @@
 .footer {
-  text-align: center;
+  bottom: 0;
+  position: fixed;
+  flex-shrink: 0;
 
-  .row {
-    margin: 20px;
+  #address {
+    text-align: center;
+  }
+
+  .phone {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .icons {
+    float: right;
   }
 }
