--- a/client/src/styles/scss/style.scss
+++ b/client/src/styles/scss/style.scss
@@ -2,6 +2,8 @@
 @import "./includes/footer";
 @import "./includes/services";
 @import "./includes/form";
+@import "./includes/hours";
+@import "./includes/contact";
 
 * {
   color: white;
@@ -11,6 +13,7 @@ body {
   margin: 0;
   padding: 0;
   background-image: url("../../images/Layer33.jpg");
+  background-repeat: no-repeat;
 
   .nameTag {
     text-align: center;
