modified header and footer

--- a/client/src/styles/scss/includes/gallery.scss
+++ b/client/src/styles/scss/includes/gallery.scss
@@ -1,15 +1,9 @@
-.products {
+.gallery {
   text-align: center;
 
   .name {
     color: yellow;
     margin: 20px;
-    text-align: left;
-  }
-
-  .text {
-    text-align: left;
-    margin: 25px;
   }
 
   .btn1 {
