--- a/client/src/styles/scss/includes/_contact.scss
+++ b/client/src/styles/scss/includes/_contact.scss
@@ -1,6 +1,13 @@
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url("../../../images/bg3.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
 .contact {
   display: flex;
-  position: absolute;
   justify-content: center;
 
   .btn {
