--- a/client/src/styles/scss/includes/_about.scss
+++ b/client/src/styles/scss/includes/_about.scss
@@ -1,6 +1,7 @@
 .about {
-  display: flex;
-  justify-content: space-around;
+  background-image: url("../../../images/bg5.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 
   .full-name {
     color: yellow;
@@ -31,6 +32,24 @@
   .nick {
     width: 90px;
     height: 120px;
+  }
+
+  #name-sergey {
+    font-size: 5em;
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+    margin-right: 20px;
+  }
+
+  #name-nick {
+    font-size: 5em;
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  }
+
+  .lines {
+    margin: 0 30px;
+    flex-grow: 1;
+    overflow: hidden;
+    height: 50px;
   }
 }
 
