--- a/client/src/styles/scss/includes/_hours.scss
+++ b/client/src/styles/scss/includes/_hours.scss
@@ -1,9 +1,25 @@
 .hours {
-  text-align: center;
+  background-image: url("../../../images/bg3.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  margin: auto;
 
-  table {
-    display: flex;
+  .table {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 3;
+    margin-bottom: 30px;
+    display: block;
     justify-content: center;
+
+    div {
+      display: flex;
+
+      div {
+        display: block;
+        flex-grow: 1;
+      }
+    }
   }
 
   button {
