--- a/client/src/styles/scss/includes/_products.scss
+++ b/client/src/styles/scss/includes/_products.scss
@@ -1,9 +1,16 @@
 .products {
   text-align: center;
+  background-image: url("../../../images/bg2.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 
   .name {
     color: yellow;
     margin: 20px;
+    text-align: left;
+  }
+
+  .description {
     text-align: left;
   }
 
