--- a/client/src/styles/scss/style.scss
+++ b/client/src/styles/scss/style.scss
@@ -1,3 +1,5 @@
+@import "./includes/pages";
+@import "./includes/menu";
 @import "./includes/header";
 @import "./includes/footer";
 @import "./includes/services";
@@ -16,9 +18,6 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("../../images/bg3.jpg");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
 
   .nameTag {
     text-align: center;
