--- a/client/src/styles/scss/includes/_home.scss
+++ b/client/src/styles/scss/includes/_home.scss
@@ -14,12 +14,104 @@
     margin: auto;
     padding: 25px 0 0 0;
 
-    #front {
-      height: 270px;
-      width: 240px;
+    .row {
+      margin-top: 30px;
     }
 
-    #chair {
+    #nick,
+    #sergey {
+      display: flex;
+      justify-content: center;
+    }
+
+    .left,
+    .right {
+      margin-top: 30px;
+    }
+
+    // Adjusting side-image with opacity
+    // ############################
+    .sergey,
+    .nick {
+      position: relative;
+      text-align: center;
+
+      #front {
+        opacity: 1;
+        display: block;
+        height: 270px;
+        width: 240px;
+        transition: 0.5s ease;
+        backface-visibility: hidden;
+      }
+
+      .side-image {
+        transition: 0.5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+
+        h1 {
+          font-size: 120px;
+          font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+        }
+      }
+
+      // HOVER container
+      &:hover #front {
+        opacity: 0;
+      }
+
+      &:hover .side-image {
+        opacity: 1;
+
+        .side-name {
+          margin-top: 15px;
+        }
+
+        .btn {
+          margin-top: 25px;
+          border-radius: 20px;
+          background-image: -webkit-linear-gradient(
+            90deg,
+            #d82900 0%,
+            #f4690e 100%
+          );
+          box-shadow: 0px 5px 18px 0px rgba(24, 23, 24, 0.38);
+          height: 45px;
+          font-size: 16px;
+          font-family: "Arial", serif;
+          color: #fff;
+          font-weight: bold;
+          line-height: 45px;
+          text-shadow: 0px 3px 2px rgba(24, 23, 24, 0.48);
+          display: inline-block;
+          padding: 0 20px;
+          border: 0;
+          outline: none;
+          cursor: pointer;
+          text-transform: capitalize;
+        }
+
+        span {
+          letter-spacing: 2px;
+          font-family: "Arial";
+          color: #fff;
+          font-weight: bold;
+          text-align: center;
+          text-shadow: 0px 3px 2px rgba(24, 23, 24, 0.48);
+          text-transform: uppercase;
+          font-size: 12px;
+        }
+      }
+    }
+    // ####################### end opacity
+
+    .nick #chair {
       height: 420px;
       width: 270px;
     }
