created menu button with links

--- a/client/src/styles/scss/includes/_pages.scss
+++ b/client/src/styles/scss/includes/_pages.scss
@@ -2,6 +2,8 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
 
   .container {
     max-width: 80%;
