--- a/client/src/styles/scss/includes/_header.scss
+++ b/client/src/styles/scss/includes/_header.scss
@@ -3,15 +3,52 @@
   display: flex;
   flex-direction: row;
 
-  .logo {
+  .img-fluid {
     padding: 25px 70px;
-    height: 200px;
-    width: 360px;
+    max-height: 200px;
+    max-width: 360px;
+  }
+  .row {
+    width: 100%;
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
+
+    .content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+
+      &:hover {
+        background-color: #ddd;
+      }
+    }
+
+    .dropdown:hover .content {
+      display: block;
+    }
+
+    .dropdown:hover .dropbtn {
+      background-color: silver;
+    }
   }
 
-  .col-12 {
+  #info {
     display: flex;
     justify-content: flex-end;
+    font-weight: bolder;
 
     a {
       color: white;
@@ -28,6 +65,10 @@
       display: flex;
       justify-content: flex-end;
       margin: 20px;
+
+      img {
+        padding-right: 15px;
+      }
     }
   }
 
@@ -35,6 +76,7 @@
     justify-content: flex-end;
     background-color: transparent;
     width: 100px;
+    padding: 20px;
   }
 
   @media (max-width: 820px) {
@@ -42,6 +84,15 @@
 
     #address {
       display: none;
+    }
+  }
+
+  @media only screen and (min-width: 375px) and (max-width: 767px) {
+    .img-fluid {
+      padding: 15px 5px 20px 15px;
+      max-height: 140px;
+      max-width: 240px;
+      float: left;
     }
   }
 }
