--- a/client/src/styles/scss/includes/_footer.scss
+++ b/client/src/styles/scss/includes/_footer.scss
@@ -1,15 +1,14 @@
 .footer {
+  display: inline-block;
   bottom: 0;
-  flex-direction: row;
-  height: 120px;
-  bottom: 0;
-  left: 50%;
-  flex-shrink: 0;
+  flex-direction: column;
   align-items: flex-end;
   margin-top: auto;
-  background: black;
+  background: transparent;
+  max-height: 120px;
 
   .address {
+    display: flex;
     justify-content: center;
     margin-top: 20px;
   }
@@ -21,7 +20,8 @@
   }
 
   .icons {
-    float: right;
+    display: flex;
+    justify-content: flex-end;
     margin-right: 60px;
 
     a {
@@ -30,8 +30,13 @@
   }
 
   @media (max-width: 670px) {
-    .address {
-      padding: 15px 15px 15px 25px;
+    .footer {
+      background-color: transparent;
+
+      .address {
+        padding: 15px 15px 15px 25px;
+        font-size: 20px;
+      }
     }
   }
 }
