--- a/client/src/styles/scss/includes/_services.scss
+++ b/client/src/styles/scss/includes/_services.scss
@@ -5,37 +5,56 @@
   text-align: center;
   margin: auto;
 
-  .col-1 {
-    color: red;
-    font-size: 30px;
-  }
+  .container {
+    .number {
+      color: red;
+      font-size: 30px;
+    }
 
-  .col-6 {
-    text-align: left;
-  }
+    .haircut {
+      text-align: left;
+    }
 
-  .nameOfServise {
-    margin: 0;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-    font-weight: bolder;
-  }
+    .nameOfServise {
+      margin: 0;
+      font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+      font-weight: bolder;
+    }
 
-  .includes {
-    color: rgb(194, 194, 57);
-    margin: 20px 0 10px 0;
-  }
+    .includes {
+      color: rgb(194, 194, 57);
+      margin: 20px 0 10px 0;
+    }
 
-  p {
-    font-size: 12px;
-    font-style: normal;
-    line-height: 2em;
-  }
+    p {
+      font-size: 12px;
+      font-style: normal;
+      line-height: 2em;
+    }
 
-  button {
-    background-color: rgb(224, 86, 32);
-    border-radius: 20px;
-    border: none;
-    width: 160px;
-    height: 45px;
+    .btn {
+      border-radius: 20px;
+      background-image: (90deg, #d82900 0%, #f4690e 100%);
+      box-shadow: 0px 5px 18px 0px rgba(24, 23, 24, 0.38);
+      height: 45px;
+      font-size: 16px;
+      font-family: "Arial", serif;
+      color: #fff;
+      font-weight: bold;
+      line-height: 45px;
+      text-shadow: 0px 3px 2px rgba(24, 23, 24, 0.48);
+      display: inline-block;
+      padding: 0 20px;
+      border: 0;
+      outline: none;
+      cursor: pointer;
+      text-transform: capitalize;
+    }
+
+    @media (max-width: 578px) {
+      .line {
+        display: none;
+      }
+    }
   }
 }
