--- a/client/src/styles/scss/includes/_hours.scss
+++ b/client/src/styles/scss/includes/_hours.scss
@@ -8,7 +8,8 @@
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 3;
-    margin-bottom: 30px;
+    margin: auto;
+    max-width: 600px;
     display: block;
     justify-content: center;
 
@@ -22,15 +23,22 @@
     }
   }
 
-  button {
-    background-color: Transparent;
-    background-repeat: no-repeat;
+  #btn {
+    border-radius: 20px;
+    background-color: transparent;
+    box-shadow: 0px 5px 18px 0px rgba(24, 23, 24, 0.38);
+    height: 45px;
+    font-size: 16px;
+    font-family: "Arial", serif;
+    color: #fff;
+    font-weight: bold;
+    line-height: 45px;
+    text-shadow: 0px 3px 2px rgba(24, 23, 24, 0.48);
+    display: inline-block;
+    padding: 0 20px;
     border: 2px solid white;
-    cursor: pointer;
-    overflow: hidden;
     outline: none;
-    border-radius: 12px;
-    color: white;
-    margin: 20px;
+    cursor: pointer;
+    text-transform: capitalize;
   }
 }
