--- a/client/src/styles/scss/includes/_services.scss
+++ b/client/src/styles/scss/includes/_services.scss
@@ -11,6 +11,11 @@
       font-size: 30px;
     }
 
+    .row {
+      border-bottom: 2px solid white;
+      margin-bottom: 15px;
+    }
+
     .haircut {
       text-align: left;
     }
@@ -32,9 +37,9 @@
       line-height: 2em;
     }
 
-    .btn {
+    .reserve-btn {
       border-radius: 20px;
-      background-image: (90deg, #d82900 0%, #f4690e 100%);
+      background-color: (90deg, #d82900 0%, #f4690e 100%);
       box-shadow: 0px 5px 18px 0px rgba(24, 23, 24, 0.38);
       height: 45px;
       font-size: 16px;
