--- a/client/src/styles/scss/includes/_menu.scss
+++ b/client/src/styles/scss/includes/_menu.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: flex-end;
 
-    .dropbtn {
+    .menu-icon {
       display: flex;
       justify-content: end;
       border: none;
@@ -16,14 +16,15 @@
   .content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: transparent;
+
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
   }
 
   .content a {
-    color: black;
+    color: red;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -37,7 +38,7 @@
     display: block;
   }
 
-  .dropdown:hover .dropbtn {
+  .dropdown:hover .menu-icon {
     background-color: silver;
   }
 }
