--- a/src/styles/scss/includes/_contact.scss
+++ b/src/styles/scss/includes/_contact.scss
@@ -6,32 +6,39 @@
   min-height: 100vh;
   padding: 0;
 
-  .outside {
-    overflow: auto;
-    display: flex;
-    justify-content: space-around;
+  .content {
+    position: relative;
+    text-align: center;
 
-    .btn {
+    .centerBox {
       position: absolute;
-      top: 65%;
-      left: 46%;
-      color: white;
-      background-color: rgb(192, 65, 14);
-      border-radius: 14px;
-      border: none;
-      width: 120px;
-      height: 35px;
-      box-shadow: darken($color: #000000, $amount: 0);
-    }
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
 
-    .btn:hover {
-      background-color: black;
-    }
+      .check {
+        margin-bottom: 15px;
+        position: relative;
+        left: 10px;
+      }
 
-    #layer38 {
-      position: absolute;
-      top: 42%;
-      left: 47%;
+      .btn {
+        background-color: rgb(224, 86, 32);
+        border-radius: 14px;
+        box-shadow: 0px 5px 18px 0px rgba(24, 23, 24, 0.38);
+        height: 45px;
+        font-size: 16px;
+        font-family: "Arial", serif;
+        color: #fff;
+        font-weight: bold;
+        line-height: 45px;
+        text-shadow: 0px 3px 2px rgba(24, 23, 24, 0.48);
+        display: inline-block;
+        padding: 0 20px;
+        border: 0;
+        outline: none;
+        cursor: pointer;
+      }
     }
   }
 }
