--- a/src/styles/scss/includes/_home.scss
+++ b/src/styles/scss/includes/_home.scss
@@ -3,9 +3,10 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   text-align: center;
-  margin: auto;
+  margin: 0;
   min-height: 100vh;
   min-width: 100vw;
+  background-size: cover;
 
   .homepage-menu {
     padding: 20px;
