--- a/src/styles/scss/includes/_footer.scss
+++ b/src/styles/scss/includes/_footer.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: flex-end;
   margin-top: auto;
-  background: transparent;
+  background: #000;
   max-height: 120px;
 
   .address {
