--- a/src/styles/scss/includes/_about.scss
+++ b/src/styles/scss/includes/_about.scss
@@ -76,7 +76,7 @@
     border: none;
     width: 120px;
     height: 35px;
-    margin: 25px;
+    // margin: 25px;
   }
   .btn3 {
     background-color: rgb(150, 35, 15);
@@ -87,12 +87,12 @@
     margin: 25px;
   }
 
-  @media only screen and (max-width: 670px) {
-    .btn1,
-    .btn2,
-    .btn3 {
-      display: block;
-      justify-content: center;
-    }
-  }
+  // @media only screen and (max-width: 670px) {
+  //   .btn1,
+  //   .btn2,
+  //   .btn3 {
+  //     display: block;
+  //     justify-content: center;
+  //   }
+  // }
 }
