--- a/src/styles/scss/includes/_menu.scss
+++ b/src/styles/scss/includes/_menu.scss
@@ -25,6 +25,7 @@
 
   .content a {
     color: red;
+    font-weight: bold;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
