styled form component

--- a/src/styles/scss/includes/_form.scss
+++ b/src/styles/scss/includes/_form.scss
@@ -37,7 +37,7 @@
     margin: 25px;
   }
 
-  // @media (min-width: 670px) {
-  //   margin: 15px;
-  // }
+  .top {
+    margin-bottom: 20px;
+  }
 }
