changed menu btn color and added images and text to readme

--- a/src/styles/scss/includes/_menu.scss
+++ b/src/styles/scss/includes/_menu.scss
@@ -16,7 +16,7 @@
   .content {
     display: none;
     position: absolute;
-    background-color: black;
+    background-color: transparent;
 
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -29,9 +29,10 @@
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    z-index: 10;
 
     &:hover {
-      background-color: #ddd;
+      background-color: gray;
     }
   }
 
