--- a/src/styles/scss/includes/_contact.scss
+++ b/src/styles/scss/includes/_contact.scss
@@ -27,7 +27,6 @@
         border-radius: 14px;
         box-shadow: 0px 5px 18px 0px rgba(24, 23, 24, 0.38);
         height: 45px;
-        font-size: 16px;
         font-family: "Arial", serif;
         color: #fff;
         font-weight: bold;
@@ -38,6 +37,16 @@
         border: 0;
         outline: none;
         cursor: pointer;
+      }
+    }
+
+    @media (max-width: 640px) {
+      .check {
+        display: none;
+      }
+
+      .btn {
+        font-size: 12px;
       }
     }
   }
