added responsivness to header

--- a/src/styles/scss/includes/_header.scss
+++ b/src/styles/scss/includes/_header.scss
@@ -2,6 +2,7 @@
   background-color: Transparent;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 
   .header-menu {
     padding: 20px;
@@ -14,9 +15,6 @@
     padding: 10px;
     height: auto;
     max-width: 190px;
-  }
-  .row {
-    width: 100%;
   }
 
   .info {
@@ -51,8 +49,18 @@
   }
 
   @media (max-width: 820px) {
-    .address {
-      display: none;
+    .info {
+      .address {
+        display: none;
+      }
+    }
+  }
+
+  @media (max-width: 578px) {
+    .info {
+      a {
+        font-size: 14px;
+      }
     }
   }
 }
