--- a/src/styles/scss/includes/_about.scss
+++ b/src/styles/scss/includes/_about.scss
@@ -55,34 +55,42 @@
     overflow: hidden;
     height: 50px;
   }
-}
 
-.buttons {
-  margin-top: 40px;
-  text-align: center;
+  .buttons {
+    margin-top: 40px;
+    text-align: center;
 
-  .btn1 {
-    background-color: rgb(150, 35, 15);
-    border-radius: 14px;
-    border: none;
-    width: 120px;
-    height: 35px;
-    margin: 25px;
+    .btn1 {
+      background-color: rgb(150, 35, 15);
+      border-radius: 14px;
+      border: none;
+      width: 120px;
+      height: 35px;
+      margin: 25px;
+    }
+
+    .btn2 {
+      background-color: rgb(224, 86, 32);
+      border-radius: 14px;
+      border: none;
+      width: 120px;
+      height: 35px;
+    }
+    .btn3 {
+      background-color: rgb(150, 35, 15);
+      border-radius: 14px;
+      border: none;
+      width: 120px;
+      height: 35px;
+      margin: 25px;
+    }
   }
 
-  .btn2 {
-    background-color: rgb(224, 86, 32);
-    border-radius: 14px;
-    border: none;
-    width: 120px;
-    height: 35px;
-  }
-  .btn3 {
-    background-color: rgb(150, 35, 15);
-    border-radius: 14px;
-    border: none;
-    width: 120px;
-    height: 35px;
-    margin: 25px;
+  @media (max-width: 768px) {
+    #name-sergey,
+    #name-nick {
+      font-size: 46px;
+      margin: 5px;
+    }
   }
 }
