--- a/src/styles/scss/includes/_products.scss
+++ b/src/styles/scss/includes/_products.scss
@@ -6,8 +6,9 @@
 
   .name {
     color: yellow;
-    margin: 20px;
+    margin: 20px 0;
     text-align: left;
+    font-weight: bold;
   }
 
   .description {
