--- a/src/styles/scss/includes/_services.scss
+++ b/src/styles/scss/includes/_services.scss
@@ -22,7 +22,7 @@
 
     .nameOfServise {
       margin: 0;
-      font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+      font-family: Georgia, "Times New Roman", Times, serif;
       font-weight: bolder;
     }
 
