--- a/src/styles/scss/includes/_about.scss
+++ b/src/styles/scss/includes/_about.scss
@@ -3,6 +3,36 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
 
+  .headerinfo {
+    .sergey {
+      width: 90px;
+      height: 120px;
+    }
+
+    .nick {
+      width: 90px;
+      height: 120px;
+    }
+
+    .lines {
+      margin: 0 30px;
+      flex-grow: 1;
+      overflow: hidden;
+      height: 50px;
+    }
+
+    #name-sergey {
+      font-size: 5em;
+      font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+      margin-right: 20px;
+    }
+
+    #name-nick {
+      font-size: 5em;
+      font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+    }
+  }
+
   .info {
     text-align: left;
   }
@@ -26,34 +56,6 @@
     margin-top: 0.8em;
     margin-bottom: 0.8em;
     font-weight: bolder;
-  }
-
-  .sergey {
-    width: 90px;
-    height: 120px;
-  }
-
-  .nick {
-    width: 90px;
-    height: 120px;
-  }
-
-  #name-sergey {
-    font-size: 5em;
-    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-    margin-right: 20px;
-  }
-
-  #name-nick {
-    font-size: 5em;
-    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  }
-
-  .lines {
-    margin: 0 30px;
-    flex-grow: 1;
-    overflow: hidden;
-    height: 50px;
   }
 
   .buttons {
@@ -87,10 +89,12 @@
   }
 
   @media (max-width: 768px) {
-    #name-sergey,
-    #name-nick {
-      font-size: 46px;
-      margin: 5px;
+    .headerinfo {
+      #name-sergey,
+      #name-nick {
+        font-size: 46px;
+        margin: 5px;
+      }
     }
   }
 }
