--- a/src/styles/scss/includes/_products.scss
+++ b/src/styles/scss/includes/_products.scss
@@ -27,6 +27,8 @@
     width: 120px;
     height: 35px;
     margin: 25px;
+    text-shadow: 3px 3px 3px #000;
+    font-style: italic;
   }
 
   .btn2 {
@@ -36,6 +38,8 @@
     width: 120px;
     height: 35px;
     margin: 25px;
+    text-shadow: 3px 3px 3px #000;
+    font-style: italic;
   }
   .btn3 {
     background-color: rgb(150, 35, 15);
@@ -44,5 +48,7 @@
     width: 120px;
     height: 35px;
     margin: 25px;
+    text-shadow: 3px 3px 3px #000;
+    font-style: italic;
   }
 }
