--- a/src/styles/scss/includes/_about.scss
+++ b/src/styles/scss/includes/_about.scss
@@ -69,6 +69,8 @@
       width: 120px;
       height: 35px;
       margin: 25px;
+      text-shadow: 3px 3px 3px #000;
+      font-style: italic;
     }
 
     .btn2 {
@@ -77,7 +79,10 @@
       border: none;
       width: 120px;
       height: 35px;
+      text-shadow: 3px 3px 3px #000;
+      font-style: italic;
     }
+
     .btn3 {
       background-color: rgb(150, 35, 15);
       border-radius: 14px;
@@ -85,6 +90,8 @@
       width: 120px;
       height: 35px;
       margin: 25px;
+      text-shadow: 3px 3px 3px #000;
+      font-style: italic;
     }
   }
 
