--- a/src/styles/scss/includes/_contact.scss
+++ b/src/styles/scss/includes/_contact.scss
@@ -6,37 +6,39 @@
   min-height: 100vh;
   padding: 0;
 
-  .content {
-    position: relative;
-    text-align: center;
+  .container {
+    .content {
+      position: relative;
+      text-align: center;
 
-    .centerBox {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      .centerBox {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
-      .check {
-        margin-bottom: 15px;
-        position: relative;
-        left: 10px;
-      }
+        .check {
+          margin-bottom: 15px;
+          position: relative;
+          left: 10px;
+        }
 
-      .btn {
-        background-color: rgb(224, 86, 32);
-        border-radius: 14px;
-        box-shadow: 0px 5px 18px 0px rgba(24, 23, 24, 0.38);
-        height: 45px;
-        font-family: "Arial", serif;
-        color: #fff;
-        font-weight: bold;
-        line-height: 45px;
-        text-shadow: 0px 3px 2px rgba(24, 23, 24, 0.48);
-        display: inline-block;
-        padding: 0 20px;
-        border: 0;
-        outline: none;
-        cursor: pointer;
+        .btn {
+          background-color: rgb(224, 86, 32);
+          border-radius: 14px;
+          box-shadow: 0px 5px 18px 0px rgba(24, 23, 24, 0.38);
+          height: 45px;
+          font-family: "Arial", serif;
+          color: #fff;
+          font-weight: bold;
+          line-height: 45px;
+          text-shadow: 0px 3px 2px rgba(24, 23, 24, 0.48);
+          display: inline-block;
+          padding: 0 20px;
+          border: 0;
+          outline: none;
+          cursor: pointer;
+        }
       }
     }
 
