--- a/src/styles/scss/includes/_form.scss
+++ b/src/styles/scss/includes/_form.scss
@@ -35,6 +35,10 @@
     width: 120px;
     height: 35px;
     margin: 25px;
+    outline: none;
+    color: #fff;
+    text-shadow: 3px 3px 3px #000;
+    font-weight: bold;
   }
 
   .top {
