styled form/placeholder

--- a/src/styles/scss/includes/_form.scss
+++ b/src/styles/scss/includes/_form.scss
@@ -15,6 +15,10 @@
     overflow: hidden;
     outline: none;
     color: white;
+
+    &::placeholder {
+      color: #fff;
+    }
   }
 
   textarea {
