--- a/src/styles/scss/includes/_header.scss
+++ b/src/styles/scss/includes/_header.scss
@@ -1,4 +1,6 @@
 .header {
+  position: relative;
+  z-index: 99999;
   background-color: Transparent;
   display: flex;
   flex-direction: row;
@@ -8,7 +10,7 @@
     padding: 20px;
     position: fixed;
     right: 5%;
-    z-index: 99;
+    z-index: 99999;
   }
 
   .img-fluid {
