--- a/src/styles/scss/includes/_menu.scss
+++ b/src/styles/scss/includes/_menu.scss
@@ -1,46 +1,70 @@
 .menu {
-  .dropdown {
+  position: relative;
+  z-index: 99999;
+
+  .overlay {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 99999;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow-y: hidden;
+    transition: 0.5s;
+    transform: translateY(-100%);
+
+    &.toggled {
+      transform: translateY(0%);
+    }
+
+    a {
+      padding: 8px;
+      text-decoration: none;
+      font-size: 36px;
+      color: #818181;
+      display: block;
+      transition: 0.3s;
+
+      a:hover,
+      a:focus {
+        color: #f1f1f1;
+      }
+    }
+
+    .closebtn {
+      position: absolute;
+      top: 40px;
+      right: 45px;
+      font-size: 60px;
+    }
+  }
+
+  span {
+    font-size: 30px;
+    cursor: pointer;
+  }
+
+  .overlay-content {
     position: relative;
-    display: flex;
-    justify-content: flex-end;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
 
-    .menu-icon {
-      display: flex;
-      justify-content: end;
-      border: none;
-      background-color: transparent;
-      color: red;
+  @media (max-height: 450px) {
+    .overlay {
+      overflow-y: auto;
     }
-  }
-
-  .content {
-    display: none;
-    position: absolute;
-    background-color: transparent;
-
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-  }
-
-  .content a {
-    color: red;
-    font-weight: bold;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    z-index: 10;
-
-    &:hover {
-      background-color: gray;
+    .overlay a {
+      font-size: 20px;
     }
-  }
-
-  .dropdown:hover .content {
-    display: block;
-  }
-
-  .dropdown:hover .menu-icon {
-    background-color: silver;
+    .overlay .closebtn {
+      font-size: 40px;
+      top: 15px;
+      right: 35px;
+    }
   }
 }
