--- a/src/styles/scss/includes/_menu.scss
+++ b/src/styles/scss/includes/_menu.scss
@@ -3,7 +3,7 @@
   z-index: 99999;
 
   .overlay {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     position: fixed;
     z-index: 99999;
@@ -14,6 +14,7 @@
     overflow-y: hidden;
     transition: 0.5s;
     transform: translateY(-100%);
+    padding: 10px;
 
     &.toggled {
       transform: translateY(0%);
@@ -23,7 +24,7 @@
       padding: 8px;
       text-decoration: none;
       font-size: 36px;
-      color: #818181;
+      color: #a3a3a3;
       display: block;
       transition: 0.3s;
 
@@ -54,7 +55,7 @@
     margin-top: 30px;
   }
 
-  @media (max-height: 450px) {
+  @media (max-height: 900px) {
     .overlay {
       overflow-y: auto;
     }
